xmonad.errors

xmonad.hs:182:33: error: Variable not in scope: xmproc :: Handle
    |
182 |          { ppOutput = hPutStrLn xmproc
    |                                 ^^^^^^
